--- a/sobre.html
+++ b/sobre.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contato - John Doe</title>
+    <title>Sobre - John Doe</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <header>
       <div>
@@ -22,28 +21,31 @@
     </header>
     <div class="container">
       <section>
-        <h1>Entre em Contato</h1>
-        <h2>Redes Sociais</h2>
-        <ul>
-          <li>
-            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
-          </li>
-          <li>
-            <a href="https://www.twitter.com/" target="_blank">Twitter</a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
-          </li>
-        </ul>
-        <h2>GitHub</h2>
+        <h1>Sobre Mim</h1>
+        <h2>Biografia</h2>
         <p>
-          <a href="https://github.com/" target="_blank">github.com/johndoe</a>
+          Sou apaixonado por tecnologia e programação desde cedo. Ao longo da
+          minha trajetória, dediquei-me ao desenvolvimento web e descobri minha
+          paixão por criar soluções digitais que impactam positivamente a vida
+          das pessoas.
         </p>
-        <h2>Email</h2>
-        <p><a href="mailto:johndoe@example.com">johndoe@example.com</a></p>
-        <h2>WhatsApp</h2>
+        <h2>Experiência Profissional</h2>
         <p>
-          <a href="https://wa.me/" target="_blank">+55 12 3456-789</a>
+          Tenho mais de 5 anos de experiência como programador web full stack.
+          Durante minha carreira, trabalhei em diversos projetos desafiadores,
+          utilizando tecnologias como HTML, CSS, JavaScript, Ruby on Rails e
+          bancos de dados como PostgreSQL e MongoDB. Minha habilidade em
+          desenvolvimento ágil, especialmente com metodologias como Scrum,
+          permitiu-me entregar produtos de alta qualidade de forma eficiente.
+        </p>
+        <h2>Formação Acadêmica</h2>
+        <p>
+          Sou graduado em Ciência da Computação pela Universidade XYZ, onde
+          desenvolvi uma base sólida em algoritmos, estruturas de dados e
+          engenharia de software. Durante meu período acadêmico, participei
+          ativamente de projetos de pesquisa e desenvolvimento, explorando novas
+          tecnologias e frameworks que me prepararam para os desafios do mercado
+          de trabalho.
         </p>
       </section>
     </div>
