--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Início - John Doe, Programador</title>
+    <title>Início - Pedro Muller Legnaghi, Programador</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <header>
       <div>
-        <div class="logo">John Doe</div>
+        <div class="logo">Pedro Muller Legnaghi</div>
         <div class="title">Programador Web Full Stack</div>
       </div>
       <nav>
@@ -22,7 +22,7 @@
     </header>
     <div class="container">
       <section>
-        <h1>John Doe, Programador</h1>
+        <h1>Pedro Muller Legnaghi, Programador</h1>
         <p>
           Sou um programador web full stack apaixonado por desenvolvimento de
           software e tecnologia. Tenho experiência com várias tecnologias web
@@ -43,12 +43,11 @@
           <li>Ruby on Rails</li>
           <li>PostgreSQL, MongoDB e Redis</li>
           <li>Versionamento de código com Git</li>
-          <li>Experiência em desenvolvimento ágil (Scrum)</li>
         </ul>
       </section>
     </div>
     <footer>
-      <p>&copy; 2024 John Doe. Todos os direitos reservados.</p>
+      <p>&copy; 2024 Pedro Muller Legnaghi. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
