--- a/sobre.html
+++ b/sobre.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sobre - John Doe</title>
+    <title>Sobre - Pedro Muller Legnaghi</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div>
-        <div class="logo">John Doe</div>
+        <div class="logo">Pedro Muller Legnaghi</div>
         <div class="title">Programador Web Full Stack</div>
       </div>
       <nav>
@@ -29,28 +29,19 @@
           paixão por criar soluções digitais que impactam positivamente a vida
           das pessoas.
         </p>
-        <h2>Experiência Profissional</h2>
-        <p>
-          Tenho mais de 5 anos de experiência como programador web full stack.
-          Durante minha carreira, trabalhei em diversos projetos desafiadores,
-          utilizando tecnologias como HTML, CSS, JavaScript, Ruby on Rails e
-          bancos de dados como PostgreSQL e MongoDB. Minha habilidade em
-          desenvolvimento ágil, especialmente com metodologias como Scrum,
-          permitiu-me entregar produtos de alta qualidade de forma eficiente.
-        </p>
         <h2>Formação Acadêmica</h2>
         <p>
-          Sou graduado em Ciência da Computação pela Universidade XYZ, onde
-          desenvolvi uma base sólida em algoritmos, estruturas de dados e
-          engenharia de software. Durante meu período acadêmico, participei
-          ativamente de projetos de pesquisa e desenvolvimento, explorando novas
-          tecnologias e frameworks que me prepararam para os desafios do mercado
-          de trabalho.
+          Sou aluno em Ciência da Computação pela Universidade Federal do Rio
+          Grande do Sul (UFRGS), onde desenvolvi uma base sólida em algoritmos,
+          estruturas de dados e engenharia de software. Durante meu período
+          acadêmico, participei ativamente de projetos de pesquisa e
+          desenvolvimento, explorando novas tecnologias e frameworks que me
+          prepararam para os desafios do mercado de trabalho.
         </p>
       </section>
     </div>
     <footer>
-      <p>&copy; 2024 John Doe. Todos os direitos reservados.</p>
+      <p>&copy; 2024 Pedro Muller Legnaghi. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
