--- a/contato.html
+++ b/contato.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contato - John Doe</title>
+    <title>Contato - Pedro Muller Legnaghi</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <header>
       <div>
-        <div class="logo">John Doe</div>
+        <div class="logo">Pedro Muller Legnaghi</div>
         <div class="title">Programador Web Full Stack</div>
       </div>
       <nav>
@@ -26,29 +26,33 @@
         <h2>Redes Sociais</h2>
         <ul>
           <li>
-            <a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+            <a
+              href="https://www.linkedin.com/in/pedro-muller-legnaghi-2b0a18241/?originalSubdomain=br"
+              target="_blank"
+              >LinkedIn</a
+            >
           </li>
+
           <li>
-            <a href="https://www.twitter.com/" target="_blank">Twitter</a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+            <a href="https://www.instagram.com/pedromuller._/" target="_blank"
+              >Instagram</a
+            >
           </li>
         </ul>
         <h2>GitHub</h2>
         <p>
-          <a href="https://github.com/" target="_blank">github.com/johndoe</a>
+          <a href="https://github.com/PedroMLegnaghi" target="_blank"
+            >github.com/PedroMLegnaghi</a
+          >
         </p>
         <h2>Email</h2>
-        <p><a href="mailto:johndoe@example.com">johndoe@example.com</a></p>
-        <h2>WhatsApp</h2>
         <p>
-          <a href="https://wa.me/" target="_blank">+55 12 3456-789</a>
+          <a href="mailto:pedrox200715@gmail.com">pedrox200715@gmail.com</a>
         </p>
       </section>
     </div>
     <footer>
-      <p>&copy; 2024 John Doe. Todos os direitos reservados.</p>
+      <p>&copy; 2024 Pedro Muller Legnaghi. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
